# libsfta

./: .gitignore  .gitmodules  AUTHORS  AutomatonContructionInteractionDiagram.dia  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  configure.ac  configure.in
cudd_facade/: CMakeLists.txt  Makefile  Makefile.am  abstract_mtbdd_facade.hh  cudd_facade.cc  cudd_facade.hh  merge_static_libraries.sh
diagrams/: SharedMTBDD.dia
doc/: SharedMTBDD.dia
include/knihovna/: abstract_shared_mtbdd.hh  convert.hh  cudd_shared_mtbdd.hh  knihovna.hh
include/sfta/: abstract_automaton.hh  abstract_automaton_factory.hh  abstract_automaton_operation.hh  abstract_automaton_transition_function.hh  abstract_bu_tree_automaton.hh  abstract_bu_tree_automaton_factory.hh  abstract_bu_tree_automaton_operation.hh  abstract_bu_tree_automaton_transition_function.hh  abstract_mtbdd_facade.hh  abstract_operation.hh  abstract_shared_mtbdd.hh  abstract_ta_builder.hh  abstract_td_tree_automaton.hh  abstract_transition_function.hh  base_transition_table_wrapper.hh  bu_tree_automaton_cover.hh  compact_variable_assignment.hh  convert.hh  cudd_facade.hh  cudd_shared_mtbdd.hh  dual_hash_table_leaf_allocator.hh  dual_map_leaf_allocator.hh  fake_file.hh  formula_parser.hh  inflatable_vector.hh  map_leaf_allocator.hh  map_root_allocator.hh  map_state_translator.hh  mtbdd_bu_tree_automaton_transition_function.hh  mtbdd_operation.hh  mtbdd_transition_function.hh  mtbdd_transition_table_wrapper.hh  nd_symbolic_bu_tree_automaton.hh  nd_symbolic_td_tree_automaton.hh  ondriks_mtbdd.hh  ordered_vector.hh  set.hh  sfta.hh  simple_state_allocator.hh  simulation_relation.hh  (+13 more)
misc/: to_dot.awk
reflib/: .gitignore  CMakeLists.txt  Makefile  check_automata_eq.sh  generator.ml  interim.ml  main.ml  make_intersection.sh  make_union.sh
reflib/alg/: Makefile  dll.ml  lts.ml  rantap.ml  rantap3.ml  rantapBase.ml  smartSet.ml  translation2.ml
reflib/antichain/: Makefile  algorithms.ml  fixpointAntichain.ml  incl.ml  localsim.ml  merge.ml  rel.ml
reflib/parsing/: Makefile  parser.mly  scanner.mll
sa/: .gitignore  Makefile  interim.ml  lts.ml  main.ml  relation.ml  sa.ml  smartSet.ml  translation2.ml
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  abstract_shared_mtbdd.hh  bu_tree_automaton_cover.cc  convert.cc  fake_file.cc  formula_parser.cc  sfta.cc  td_tree_automaton_cover.cc  union.cc
src/testsuite/sfta.test/: intersection.exp
templates/: cc_class.template  cc_file.template  cc_function.template  shell.template
tests/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  compare_sim_output.sh  cudd_facade_test.cc  cudd_shared_mtbdd_cc_test.cc  cudd_shared_mtbdd_test.cc  cudd_shared_mtbdd_uv_test.cc  generic_test.sh  intersection_test.sh  log_fixture.cc  log_fixture.hh  mtbdd_transition_function_test.cc  nd_symbolic_bu_tree_automaton_test.cc  random_symbolic_timbuk_converter.awk  symbolic_bu_tree_automaton_test.cc  symbolic_timbuk_expander.awk  timbuk_ta_builder_test.cc  tree_automaton_test.cc  union_test.sh  union_test_automata.txt  valgrind.supressions
tests/automata/: A11  A28  A30  A6_other  aut1  aut2  easy1  easy2  finite  for_simulation  for_simulation_nnary  for_simulation_unary  infinite
unit_tests/: .gitignore  CMakeLists.txt  Makefile.am  cudd_facade_test.cc  cudd_shared_mtbdd_cc_test.cc  cudd_shared_mtbdd_uv_test.cc  log_fixture.cc  log_fixture.hh  nd_symbolic_bu_tree_automaton_test.cc  ondriks_mtbdd_c_test.cc
unit_tests/automata/: A11  A12  A13  finite_for_reduction  for_simulation_binary
