dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)


dnl *** check for programs **************************************************
# check for C++ compiler
AC_PROG_CXX


dnl *** check for libraries *************************************************
# search for TODO


dnl *** compiler characteristic *********************************************
CXXFLAGS=""
CXXFLAGS="$CXXFLAGS -std=c++98"
CXXFLAGS="$CXXFLAGS -pedantic-errors"
CXXFLAGS="$CXXFLAGS -Wextra"
CXXFLAGS="$CXXFLAGS -Wall"
CXXFLAGS="$CXXFLAGS -Wfloat-equal"
CXXFLAGS="$CXXFLAGS -Wctor-dtor-privacy"
CXXFLAGS="$CXXFLAGS -Weffc++"
CXXFLAGS="$CXXFLAGS -Wold-style-cast"
CXXFLAGS="$CXXFLAGS -Woverloaded-virtual"
CXXFLAGS="$CXXFLAGS -finline-functions"
CXXFLAGS="$CXXFLAGS -fdiagnostics-show-option"
CXXFLAGS="$CXXFLAGS -O2"
CXXFLAGS="$CXXFLAGS -march=core2"
CXXFLAGS="$CXXFLAGS -mtune=core2"
CXXFLAGS="$CXXFLAGS -msse2"
#CXXFLAGS="$CXXFLAGS -g"
#CXXFLAGS="$CXXFLAGS -pg"



dnl *** Autoconf output - Makefiles  ****************************************
AC_OUTPUT([
 Makefile
 src/Makefile
 tests/Makefile
])
